[package]
name = "swamp-wgpu-sprites"
version = "0.0.1"
edition = "2021"
description = "Swamp wgpu sprite utility functions"
repository = "https://github.com/piot/swamp-render"
categories = ["game-development"]
keywords = ["game", "render", "sprites"]

[dependencies]
bytemuck = "1.19.0"
image = "0.25.4"
log = "0.4.22"
wgpu = "23.0.0"

swamp-wgpu = { path = "../swamp-wgpu", version = "0.0.1" }
