[package]
name = "swamp-wgpu-window"
version = "0.0.1"
edition = "2021"
description = "creating and managing a window with rendering surfaces using winit and wgpu"
repository = "https://github.com/piot/swamp-render"
categories = ["game-development"]
keywords = ["game", "render", "sprites"]

[dependencies]
log = "0.4.22"
wgpu = "23.0.0"
winit = "0.30.5"
